[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/resources_screen_handler.gd" type="Script" id=1]
[ext_resource path="res://img/dyson_sphere_01.jpg" type="Texture" id=2]
[ext_resource path="res://ui/map_01.png" type="Texture" id=3]
[ext_resource path="res://ui/label_bg.png" type="Texture" id=4]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=5]
[ext_resource path="res://ui/box_01.png" type="Texture" id=6]
[ext_resource path="res://ui/score_icon.png" type="Texture" id=7]
[ext_resource path="res://ui/weapon_01.png" type="Texture" id=8]
[ext_resource path="res://scripts/resources_spender.gd" type="Script" id=9]
[ext_resource path="res://fonts/Space_bold.otf" type="DynamicFontData" id=10]
[ext_resource path="res://ui/shield_01.png" type="Texture" id=11]
[ext_resource path="res://ui/velocime 01.png" type="Texture" id=12]
[ext_resource path="res://shared/music/main screen.ogg" type="AudioStream" id=13]
[ext_resource path="res://characters/enemies/spawner.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = true
font_data = ExtResource( 10 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )
Label/colors/font_color = Color( 0, 0.902344, 0.183289, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null
_sections_unfolded = [ "Label", "Label/colors" ]

[sub_resource type="DynamicFont" id=3]

size = 15
use_mipmaps = false
use_filter = true
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=4]

default_font = SubResource( 3 )
Label/colors/font_color = Color( 0.945313, 0.937927, 0.937927, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null
_sections_unfolded = [ "Label" ]

[sub_resource type="DynamicFont" id=5]

size = 20
use_mipmaps = false
use_filter = true
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=6]

default_font = SubResource( 5 )
Label/colors/font_color = Color( 0.945313, 0.937927, 0.937927, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null
_sections_unfolded = [ "Label" ]

[sub_resource type="DynamicFont" id=7]

size = 15
use_mipmaps = false
use_filter = false
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[node name="resources_screen" type="Node"]

script = ExtResource( 1 )

[node name="bg_sprite" type="Sprite" parent="." index="0"]

position = Vector2( 382, 254 )
z_index = -2
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="tween" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="map_ui" type="TextureRect" parent="." index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 35.0
margin_top = 9.0
margin_right = 1987.0
margin_bottom = 2696.0
rect_scale = Vector2( 0.17, 0.17 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="resources_ui" type="Container" parent="." index="3"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="controls_ui" type="Container" parent="resources_ui" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="resources_node" type="NinePatchRect" parent="resources_ui/controls_ui" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 419.0
margin_top = 16.0
margin_right = 746.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="resources_label" type="Label" parent="resources_ui/controls_ui/resources_node" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "Resources: 50"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="resources_icon" type="TextureRect" parent="resources_ui/controls_ui/resources_node" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -46.0
margin_right = 105.0
margin_bottom = 64.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="score_node" type="NinePatchRect" parent="resources_ui/controls_ui" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 424.0
margin_top = 64.0
margin_right = 751.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="score_label" type="Label" parent="resources_ui/controls_ui/score_node" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "Score: 50"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="score_icon" type="TextureRect" parent="resources_ui/controls_ui/score_node" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -46.0
margin_right = 105.0
margin_bottom = 64.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="attack_node" type="NinePatchRect" parent="resources_ui/controls_ui" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 430.0
margin_top = 150.0
margin_right = 792.0
margin_bottom = 190.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
_sections_unfolded = [ "Rect" ]

[node name="attack_label" type="Label" parent="resources_ui/controls_ui/attack_node" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 69.0
margin_top = -2.0
margin_right = -171.0
margin_bottom = 5.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "Attack"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="attack_icon" type="TextureRect" parent="resources_ui/controls_ui/attack_node" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -47.0
margin_right = 143.0
margin_bottom = 97.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="attack_minus" type="Button" parent="resources_ui/controls_ui/attack_node" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_top = -6.0
margin_right = 235.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "-"
flat = false
align = 1
script = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="attack_plus" type="Button" parent="resources_ui/controls_ui/attack_node" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = -6.0
margin_right = 370.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1
script = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="attack_text" type="Label" parent="resources_ui/controls_ui/attack_node" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_top = -2.0
margin_right = 315.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="armor_node" type="NinePatchRect" parent="resources_ui/controls_ui" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 430.0
margin_top = 200.0
margin_right = 792.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
_sections_unfolded = [ "Rect" ]

[node name="armor_label" type="Label" parent="resources_ui/controls_ui/armor_node" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 69.0
margin_top = -2.0
margin_right = -171.0
margin_bottom = 5.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "Armor"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="armor_icon" type="TextureRect" parent="resources_ui/controls_ui/armor_node" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -42.0
margin_right = 213.0
margin_bottom = 213.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 11 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="armor_minus" type="Button" parent="resources_ui/controls_ui/armor_node" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_top = -6.0
margin_right = 235.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "-"
flat = false
align = 1
script = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="armor_plus" type="Button" parent="resources_ui/controls_ui/armor_node" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = -6.0
margin_right = 370.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1
script = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="armor_text" type="Label" parent="resources_ui/controls_ui/armor_node" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 253.0
margin_top = -4.0
margin_right = 309.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="speed_node" type="NinePatchRect" parent="resources_ui/controls_ui" index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 430.0
margin_top = 250.0
margin_right = 792.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
_sections_unfolded = [ "Rect" ]

[node name="speed_label" type="Label" parent="resources_ui/controls_ui/speed_node" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 69.0
margin_top = -2.0
margin_right = -171.0
margin_bottom = 5.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "Speed"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="speed_icon" type="TextureRect" parent="resources_ui/controls_ui/speed_node" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -41.0
margin_right = 313.0
margin_bottom = 186.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="speed_minus" type="Button" parent="resources_ui/controls_ui/speed_node" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_top = -4.0
margin_right = 235.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "-"
flat = false
align = 1
script = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="speed_plus" type="Button" parent="resources_ui/controls_ui/speed_node" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = -6.0
margin_right = 370.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1
script = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="speed_text" type="Label" parent="resources_ui/controls_ui/speed_node" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 253.0
margin_top = -1.0
margin_right = 312.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="next_stage_btn" type="Button" parent="resources_ui/controls_ui" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 422.0
margin_top = 334.0
margin_right = 599.0
margin_bottom = 387.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Next Stage"
flat = false
align = 1
script = ExtResource( 9 )
_sections_unfolded = [ "Theme" ]

[node name="exit_btn" type="Button" parent="resources_ui/controls_ui" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 616.0
margin_top = 334.0
margin_right = 793.0
margin_bottom = 387.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1
script = ExtResource( 9 )
_sections_unfolded = [ "Theme" ]

[node name="attack_cost" type="Label" parent="resources_ui/controls_ui" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 372.0
margin_top = 150.0
margin_right = 426.0
margin_bottom = 197.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "200"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="armor_cost" type="Label" parent="resources_ui/controls_ui" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 372.0
margin_top = 196.0
margin_right = 426.0
margin_bottom = 243.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "500"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="speed_cost" type="Label" parent="resources_ui/controls_ui" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 375.0
margin_top = 244.0
margin_right = 429.0
margin_bottom = 291.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="speed_cost2" type="Label" parent="resources_ui/controls_ui" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 368.0
margin_top = 108.0
margin_right = 437.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "Cost"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="resources_dialog" type="AcceptDialog" parent="resources_ui" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 136.0
margin_right = 647.0
margin_bottom = 214.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 4 )
popup_exclusive = false
window_title = "Ooops!"
resizable = false
dialog_text = "Not enough resources man! You are not trying to steal from us, aren't you?"
dialog_hide_on_ok = true
_sections_unfolded = [ "Anchor", "Dialog", "Popup", "Rect", "Theme" ]

[node name="lore_button" type="Button" parent="resources_ui" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 379.0
margin_top = 414.0
margin_right = 640.0
margin_bottom = 457.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Incomming transmission..."
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="help_button" type="Button" parent="resources_ui" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 730.0
margin_top = 414.0
margin_right = 786.0
margin_bottom = 457.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Help"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="dialog" type="Control" parent="." index="5"]

pause_mode = 2
editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Pause" ]

[node name="dialog_bg" type="ColorRect" parent="dialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 147.0
margin_top = 16.0
margin_right = 744.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.290196, 0.305882, 0.376471, 0.839765 )

[node name="dialog_text" type="RichTextLabel" parent="dialog" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 164.0
margin_top = 39.0
margin_right = 731.0
margin_bottom = 266.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = false
bbcode_text = "Transmission incoming..."
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Transmission incoming..."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Theme", "Visibility", "custom_fonts", "custom_styles" ]

[node name="ok_dialog_btn" type="Button" parent="dialog" index="2"]

modulate = Color( 1, 1, 1, 0.712706 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 173.0
margin_top = 283.0
margin_right = 257.0
margin_bottom = 313.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "OK"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="spawner" parent="." index="6" instance=ExtResource( 14 )]

modulate = Color( 1, 1, 1, 0.751373 )
z_index = -1
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]
velocity = Vector2( -100, 0 )
wait_time = 3.0
enemy_type = 4
spawn_origin = "E"
background_spawn = true

[node name="spawner2" parent="." index="7" instance=ExtResource( 14 )]

modulate = Color( 1, 1, 1, 0.751373 )
z_index = -1
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]
velocity = Vector2( 0, 100 )
wait_time = 4.0
enemy_type = 21
spawn_origin = "N"
background_spawn = true

[connection signal="pressed" from="resources_ui/lore_button" to="." method="_on_lore_button_pressed"]

[connection signal="pressed" from="resources_ui/help_button" to="." method="_on_help_button_pressed"]

[connection signal="pressed" from="dialog/ok_dialog_btn" to="." method="_on_ok_dialog_btn_pressed"]


